--- a/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.html
+++ b/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.html
@@ -53,7 +53,7 @@
                   [max]="50"
                   [step]="1"
                   [formControl]="control"
-                  (tuiValueChanges)="onBallOnChange($event, i)"
+                  (tuiValueChanges)="onBallOnChange(events, eventsArray, $event, i)"
                 >
                 </tui-input-number>
               </div>
