--- a/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.html
+++ b/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.html
@@ -206,9 +206,9 @@
                       [deleteOrUpdate]="'delete'"
                       [item]="eventNumber.toString()"
                       (onSubmit)="onSubmitNewEvent($event.action, $event.index, $event.id)"
-                      [isEnabled]="isRowEnabled(i)"
-                      [isDataChanged]="isDataChanged(i)"
-                      (onEdit)="enableRowToEdit($event.index)"
+                      [isEnabled]="isFullRowEnabled(eventsArray, i)"
+                      [isDataChanged]="isDataChanged(eventsArray, i)"
+                      (onEdit)="enableFullRowToEdit(eventsArray, $event.index)"
                       (onCancel)="onCancelButtonClick()"
                       (onDelete)="onDeleteEvent($event.id!)"
                       (onDeleteDialog)="onDeleteButtonClick('deleteDialogPlayer' + $event.id!)"
