match events disable keybord on mobile

--- a/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.html
+++ b/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.html
@@ -19,6 +19,7 @@
                 <div class="event-table-cell">
                   <label>Event Number</label>
                   <tui-input-number
+                    [tuiFocusable]="false"
                     [tuiTextfieldCleaner]="true"
                     [min]="1"
                     [step]="1"
