--- a/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.html
+++ b/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.html
@@ -18,37 +18,44 @@
               @if (getEventNumberFormControl(this.eventForm, this.arrayName, i); as control) {
                 <div class="event-table-cell">
                   <label>Event Number</label>
-                  <div
-                    style="display: grid; grid-template-columns: auto auto; grid-template-rows: auto auto; grid-gap: 5px">
-                    <tui-input-number
-                      [tuiTextfieldSize]="'l'"
-                      style="grid-row: span 2"
-                      [formControl]="control">
-                      Event Number
-                      <input
-                        name="event number"
-                        tuiTextfield
-                      />
-                    </tui-input-number>
-                    <button
-                      appearance="icon"
-                      icon="tuiIconPlus"
-                      tuiIconButton
-                      [size]="'xs'"
-                      (click)="incrementEventNumber(i, -1)"
-                      [disabled]="control.disabled"
-                    >-
-                    </button>
-                    <button
-                      appearance="icon"
-                      icon="tuiIconMinus"
-                      tuiIconButton
-                      [size]="'xs'"
-                      (click)="incrementEventNumber(i, 1)"
-                      [disabled]="control.disabled"
-                    >+
-                    </button>
-                  </div>
+                  <app-input-number-with-buttons
+                    [control]="control"
+                    [label]="'event number'"
+                    [index]="i"
+                    [key]="eventNumberKey"
+                    (numberChanged)="handleFieldChange($event)"
+                  ></app-input-number-with-buttons>
+                  <!--                  <div-->
+                  <!--                    style="display: grid; grid-template-columns: auto auto; grid-template-rows: auto auto; grid-gap: 5px">-->
+                  <!--                    <tui-input-number-->
+                  <!--                      [tuiTextfieldSize]="'l'"-->
+                  <!--                      style="grid-row: span 2"-->
+                  <!--                      [formControl]="control">-->
+                  <!--                      Event Number-->
+                  <!--                      <input-->
+                  <!--                        name="event number"-->
+                  <!--                        tuiTextfield-->
+                  <!--                      />-->
+                  <!--                    </tui-input-number>-->
+                  <!--                    <button-->
+                  <!--                      appearance="icon"-->
+                  <!--                      icon="tuiIconMinus"-->
+                  <!--                      tuiIconButton-->
+                  <!--                      [size]="'xs'"-->
+                  <!--                      (click)="incrementEventNumber(i, -1)"-->
+                  <!--                      [disabled]="control.disabled"-->
+                  <!--                    >- -->
+                  <!--                    </button>-->
+                  <!--                    <button-->
+                  <!--                      appearance="icon"-->
+                  <!--                      icon="tuiIconPlus"-->
+                  <!--                      tuiIconButton-->
+                  <!--                      [size]="'xs'"-->
+                  <!--                      (click)="incrementEventNumber(i, 1)"-->
+                  <!--                      [disabled]="control.disabled"-->
+                  <!--                    >+-->
+                  <!--                    </button>-->
+                  <!--                  </div>-->
                 </div>
               }
 
@@ -56,13 +63,22 @@
               @if (getQtrFormControl(this.eventForm, this.arrayName, i); as control) {
                 <div class="event-table-cell">
                   <label>Qtr</label>
-                  <tui-input-number
+                  <app-input-number-with-buttons
+                    [label]="'Qtr'"
+                    [control]="control"
+                    [index]="i"
+                    [key]="eventQtrKey"
                     [min]="1"
                     [max]="4"
-                    [step]="1"
-                    [tuiTextfieldCleaner]="true"
-                    [formControl]="control">
-                  </tui-input-number>
+                    (numberChanged)="handleFieldChange($event)"
+                  ></app-input-number-with-buttons>
+                  <!--                  <tui-input-number-->
+                  <!--                    [min]="1"-->
+                  <!--                    [max]="4"-->
+                  <!--                    [step]="1"-->
+                  <!--                    [tuiTextfieldCleaner]="true"-->
+                  <!--                    [formControl]="control">-->
+                  <!--                  </tui-input-number>-->
                 </div>
               }
             </div>
@@ -71,6 +87,15 @@
             @if (getBallOnFormControl(this.eventForm, this.arrayName, i); as control) {
               <div class="event-table-cell">
                 <label>Ball On</label>
+                <!--                <app-input-number-with-buttons-->
+                <!--                  [control]="control"-->
+                <!--                  [index]="i"-->
+                <!--                  [key]="eventBallOnKey"-->
+                <!--                  [min]="-50"-->
+                <!--                  [max]="50"-->
+                <!--                  (numberChanged)="handleFieldChange($event)"-->
+                <!--                  (tuiValueChanges)="onBallOnChange(events, eventsArray, $event, i)"-->
+                <!--                ></app-input-number-with-buttons>-->
                 <tui-input-number
                   [tuiTextfieldSize]="'l'"
                   [tuiTextfieldCleaner]="true"
@@ -133,13 +158,22 @@
                 @if (getEventDistanceFormControl(this.eventForm, this.arrayName, i); as control) {
                   <div class="event-distance">
                     <label>Distance</label>
-                    <tui-input-number
-                      [tuiTextfieldCleaner]="true"
+                    <app-input-number-with-buttons
+                      [label]="'Dist'"
+                      [control]="control"
+                      [index]="i"
+                      [key]="eventDistanceKey"
                       [min]="1"
                       [max]="100"
-                      [step]="1"
-                      [formControl]="control">
-                    </tui-input-number>
+                      (numberChanged)="handleFieldChange($event)"
+                    ></app-input-number-with-buttons>
+                    <!--                    <tui-input-number-->
+                    <!--                      [tuiTextfieldCleaner]="true"-->
+                    <!--                      [min]="1"-->
+                    <!--                      [max]="100"-->
+                    <!--                      [step]="1"-->
+                    <!--                      [formControl]="control">-->
+                    <!--                    </tui-input-number>-->
                   </div>
                 }
               </div>
