--- a/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.less
+++ b/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.less
@@ -4,7 +4,11 @@
 }
 
 .event-table-row {
+  box-shadow: 0px 0px 10px 0px #232323;
+  padding: 15px;
+  border-radius: 5px;
   display: grid;
+  margin: 10px;
 }
 
 .event-table-cell {
@@ -26,6 +30,8 @@
   grid-template-columns: 50% 50%;
   grid-template-rows: auto;
   grid-gap: 10px;
+  justify-content: stretch;
+  align-items: center;
 }
 
 .event-hash-type {
