--- a/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.less
+++ b/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.less
@@ -1,21 +1,23 @@
 .event-table {
-  width: 100%;
+  //width: 100%;
   font-size: 16px;
+  //padding: 10px;
 }
 
 .event-table-row {
   box-shadow: 0px 0px 10px 0px #232323;
-  padding: 15px;
+  padding: 10px;
   border-radius: 5px;
   display: grid;
-  margin: 10px;
+  margin-bottom: 5px;
+  margin-top: 5px;
 }
 
 .event-table-cell {
   display: grid;
   grid-template-columns: auto;
   grid-gap: 10px;
-  //padding: 5px;
+  //padding: 10px;
 }
 
 .event-num-qtr-row {
@@ -23,6 +25,7 @@
   grid-template-columns: 50% 50%;
   grid-template-rows: auto;
   grid-gap: 10px;
+  //padding: 10px;
 }
 
 .event-down-distance {
@@ -32,6 +35,7 @@
   grid-gap: 10px;
   justify-content: stretch;
   align-items: center;
+  //padding: 10px;
 }
 
 .event-hash-type {
@@ -39,4 +43,5 @@
   grid-template-columns: 50% 50%;
   grid-template-rows: auto;
   grid-gap: 10px;
+  //padding: 10px;
 }
