events refactoring forms and buttons

--- a/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.less
+++ b/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.less
@@ -17,7 +17,8 @@
   display: grid;
   grid-template-columns: auto;
   grid-gap: 10px;
-  //padding: 10px;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
 .event-num-qtr-row {
