--- a/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.html
+++ b/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.html
@@ -25,37 +25,6 @@
                     [key]="eventNumberKey"
                     (numberChanged)="handleFieldChange($event)"
                   ></app-input-number-with-buttons>
-                  <!--                  <div-->
-                  <!--                    style="display: grid; grid-template-columns: auto auto; grid-template-rows: auto auto; grid-gap: 5px">-->
-                  <!--                    <tui-input-number-->
-                  <!--                      [tuiTextfieldSize]="'l'"-->
-                  <!--                      style="grid-row: span 2"-->
-                  <!--                      [formControl]="control">-->
-                  <!--                      Event Number-->
-                  <!--                      <input-->
-                  <!--                        name="event number"-->
-                  <!--                        tuiTextfield-->
-                  <!--                      />-->
-                  <!--                    </tui-input-number>-->
-                  <!--                    <button-->
-                  <!--                      appearance="icon"-->
-                  <!--                      icon="tuiIconMinus"-->
-                  <!--                      tuiIconButton-->
-                  <!--                      [size]="'xs'"-->
-                  <!--                      (click)="incrementEventNumber(i, -1)"-->
-                  <!--                      [disabled]="control.disabled"-->
-                  <!--                    >- -->
-                  <!--                    </button>-->
-                  <!--                    <button-->
-                  <!--                      appearance="icon"-->
-                  <!--                      icon="tuiIconPlus"-->
-                  <!--                      tuiIconButton-->
-                  <!--                      [size]="'xs'"-->
-                  <!--                      (click)="incrementEventNumber(i, 1)"-->
-                  <!--                      [disabled]="control.disabled"-->
-                  <!--                    >+-->
-                  <!--                    </button>-->
-                  <!--                  </div>-->
                 </div>
               }
 
@@ -72,13 +41,6 @@
                     [max]="4"
                     (numberChanged)="handleFieldChange($event)"
                   ></app-input-number-with-buttons>
-                  <!--                  <tui-input-number-->
-                  <!--                    [min]="1"-->
-                  <!--                    [max]="4"-->
-                  <!--                    [step]="1"-->
-                  <!--                    [tuiTextfieldCleaner]="true"-->
-                  <!--                    [formControl]="control">-->
-                  <!--                  </tui-input-number>-->
                 </div>
               }
             </div>
@@ -99,17 +61,6 @@
                   (numberChanged)="handleFieldChange($event)"
                   [onBallOnChange]="onBallOnChange"
                 ></app-input-number-with-buttons>
-
-                <!--                <tui-input-number-->
-                <!--                  [tuiTextfieldSize]="'l'"-->
-                <!--                  [tuiTextfieldCleaner]="true"-->
-                <!--                  [min]="-50"-->
-                <!--                  [max]="50"-->
-                <!--                  [step]="1"-->
-                <!--                  [formControl]="control"-->
-                <!--                  (tuiValueChanges)="onBallOnChange(events, eventsArray, $event, i)"-->
-                <!--                >-->
-                <!--                </tui-input-number>-->
               </div>
             }
 
@@ -160,14 +111,6 @@
                       (numberChanged)="handleFieldChange($event)"
                       [onDownChange]="onDownChange"
                     ></app-input-number-with-buttons>
-                    <!--                    <tui-input-number-->
-                    <!--                      [tuiTextfieldCleaner]="true"-->
-                    <!--                      [min]="1"-->
-                    <!--                      [max]="4"-->
-                    <!--                      [step]="1"-->
-                    <!--                      (tuiValueChanges)="onDownChange(eventsArray, $event, i)"-->
-                    <!--                      [formControl]="control">-->
-                    <!--                    </tui-input-number>-->
                   </div>
                 }
                 @if (getEventDistanceFormControl(this.eventForm, this.arrayName, i); as control) {
@@ -182,13 +125,6 @@
                       [max]="100"
                       (numberChanged)="handleFieldChange($event)"
                     ></app-input-number-with-buttons>
-                    <!--                    <tui-input-number-->
-                    <!--                      [tuiTextfieldCleaner]="true"-->
-                    <!--                      [min]="1"-->
-                    <!--                      [max]="100"-->
-                    <!--                      [step]="1"-->
-                    <!--                      [formControl]="control">-->
-                    <!--                    </tui-input-number>-->
                   </div>
                 }
               </div>
@@ -228,6 +164,7 @@
                   [control]="control"
                   [placeholder]="'play result'"
                   [enumObjects]="eventFilteredPlayResultOptions"
+                  (itemSelected)="handlePlayResultChange(eventsArray, $event, i)"
                 ></app-select-enum>
               </div>
             }
@@ -236,7 +173,8 @@
             @if (getEventRunPlayerFormControl(this.eventForm, this.arrayName, i); as control) {
               <div class="event-table-cell">
                 @if (getEventTeam(eventsArray, i); as selectedTeam) {
-                  @if (isPlayType(eventFormGroup, i, 'eventPlayType', IFootballPlayType.Run)) {
+                  @if (isPlayType(eventFormGroup, i, eventPlayTypeKey, IFootballPlayType.Run) ||
+                  getEventRunPlayer(eventsArray, i)) {
                     <label>Run Player</label>
                     <app-search-player-in-match-autocomplete
                       [action]="'select'"
@@ -249,11 +187,12 @@
               </div>
             }
 
-            <!--EVENT PASS PLAYER-->
+            <!--EVENT RECEIVER PLAYER-->
             @if (getEventReceiverPlayerFormControl(this.eventForm, this.arrayName, i); as control) {
               <div class="event-table-cell">
                 @if (getEventTeam(eventsArray, i); as selectedTeam) {
-                  @if (isPlayType(eventFormGroup, i, 'eventPlayType', IFootballPlayType.Pass)) {
+                  @if (isPlayResult(eventFormGroup, i, eventPlayResultKey, IFootballPlayResult.PassCompleted) ||
+                  getEventReceiverPlayer(eventsArray, i)) {
                     <label>Receiver Player</label>
                     <app-search-player-in-match-autocomplete
                       [action]="'select'"
@@ -266,11 +205,30 @@
               </div>
             }
 
+            <!--EVENT DROPPED PLAYER-->
+            @if (getEventDroppedPlayerFormControl(this.eventForm, this.arrayName, i); as control) {
+              <div class="event-table-cell">
+                @if (getEventTeam(eventsArray, i); as selectedTeam) {
+                  @if (isPlayResult(eventFormGroup, i, eventPlayResultKey, IFootballPlayResult.PassDropped) ||
+                  getEventDroppedPlayer(eventsArray, i)) {
+                    <label>Dropped Player</label>
+                    <app-search-player-in-match-autocomplete
+                      [action]="'select'"
+                      [placeholder]="'dropped player'"
+                      [players]="getPlayersForSelectedTeam(selectedTeam)"
+                      [control]="control">
+                    </app-search-player-in-match-autocomplete>
+                  }
+                }
+              </div>
+            }
+
             <!--EVENT KICK PLAYER-->
             @if (getEventKickPlayerFormControl(this.eventForm, this.arrayName, i); as control) {
               <div class="event-table-cell">
                 @if (getEventTeam(eventsArray, i); as selectedTeam) {
-                  @if (isPlayType(eventFormGroup, i, 'eventPlayType', IFootballPlayType.Kick)) {
+                  @if (isPlayType(eventFormGroup, i, eventPlayTypeKey, IFootballPlayType.Kick) ||
+                  getEventKickPlayer(eventsArray, i)) {
                     <label>Kick Player</label>
                     <app-search-player-in-match-autocomplete
                       [action]="'select'"
@@ -287,13 +245,70 @@
             @if (getEventPuntPlayerFormControl(this.eventForm, this.arrayName, i); as control) {
               <div class="event-table-cell">
                 @if (getEventTeam(eventsArray, i); as selectedTeam) {
-                  @if (isPlayType(eventFormGroup, i, 'eventPlayType', IFootballPlayType.Punt)) {
+                  @if (isPlayType(eventFormGroup, i, eventPlayTypeKey, IFootballPlayType.Punt) ||
+                  getEventPuntPlayer(eventsArray, i)) {
                     <label>Punt Player</label>
                     <app-search-player-in-match-autocomplete
                       [action]="'select'"
                       [placeholder]="'punt player'"
                       [players]="getPlayersForSelectedTeam(selectedTeam)"
                       [control]="control">
+                    </app-search-player-in-match-autocomplete>
+                  }
+                }
+              </div>
+            }
+
+            <!--EVENT DEFLECTED PLAYER-->
+            @if (getEventDeflectedPlayerFormControl(this.eventForm, this.arrayName, i); as control) {
+              <div class="event-table-cell">
+                @if (getEventTeam(eventsArray, i); as selectedTeam) {
+                  @if (isPlayResult(eventFormGroup, i, eventPlayResultKey, IFootballPlayResult.PassDeflected) ||
+                  getEventDeflectedPlayer(eventsArray, i)) {
+                    <label>Deflected Player</label>
+                    <app-search-player-in-match-autocomplete
+                      [action]="'select'"
+                      [placeholder]="'deflected player'"
+                      [players]="getDefencePlayersForTeam(selectedTeam)"
+                      [control]="control">
+                    </app-search-player-in-match-autocomplete>
+                  }
+                }
+              </div>
+            }
+
+            <!--EVENT INTERCEPTED PLAYER-->
+            @if (getEventInterceptedPlayerFormControl(this.eventForm, this.arrayName, i); as control) {
+              <div class="event-table-cell">
+                @if (getEventTeam(eventsArray, i); as selectedTeam) {
+                  @if (isPlayResult(eventFormGroup, i, eventPlayResultKey, IFootballPlayResult.PassIntercepted) ||
+                  getEventInterceptedPlayer(eventsArray, i)) {
+                    <label>Intercepted Player</label>
+                    <app-search-player-in-match-autocomplete
+                      [action]="'select'"
+                      [placeholder]="'intercepted player'"
+                      [players]="getDefencePlayersForTeam(selectedTeam)"
+                      [control]="control">
+                    </app-search-player-in-match-autocomplete>
+                  }
+                }
+              </div>
+            }
+
+            <!--EVENT TACKLE PLAYER-->
+            @if (getEventTacklePlayerFormControl(this.eventForm, this.arrayName, i); as control) {
+              <div class="event-table-cell">
+                @if (getEventTeam(eventsArray, i); as selectedTeam) {
+                  @if (!isPlayResult(eventFormGroup, i, eventPlayResultKey, IFootballPlayResult.Flag) ||
+                  getEventTacklePlayer(eventsArray, i)) {
+                    <label>Tackle Player</label>
+                    <app-search-player-in-match-autocomplete
+                      [action]="'select'"
+                      [placeholder]="'tackle player'"
+                      [players]="getDefencePlayersForTeam(selectedTeam)"
+                      [control]="control"
+                      (reset)="control.setValue(null)"
+                    >
                     </app-search-player-in-match-autocomplete>
                   }
                 }
